--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,9 +1,11 @@
 ---
 driver:
   name: vagrant
+  memory: 4096
 
 provisioner:
   name: chef_zero
+  require_chef_omnibus: 11.18.0
 
 platforms:
   - name: ubuntu-12.04
